add portfolio to projects

--- a/index.html
+++ b/index.html
@@ -171,6 +171,28 @@
           </div>
         </div>
       </div>
+      <div class="project-container">
+        <h3>Portfolio</h3>
+        <div class="overlay-container">
+          <img src="./assets/images/portfolio.png" alt="a picture of my portfolio" class="project-img">
+          <div class="stack">
+            <div class="icons">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+            </div>
+          </div>
+        </div>
+        <p>I built this mobile-friendly portfolio to practice my skills, flex my design ability, and share more about myself.</p>
+        <div class="project-links">
+          <a href="https://suzanne-trammel-portfolio.netlify.app/" target="_blank">
+            <h4>Launch</h4>
+          </a>
+          <a href="https://github.com/strammel33/portfolio" class="git-link" target="_blank">
+            <h4>GitHub</h4>
+          </a>
+        </div>
+      </div>
     </section>
     <section class="contact" id="contact">
       <h2>Contact Me</h2>
