update about me and some project description text

--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
         </div>
         <div class="about-me">
           <h3>Hi! I'm Suzanne Trammel.</h3>
-          <p>I am a versatile problem-solver with a passion for creating innovative solutions. With a wildlife biology and veterinary medicine background, I bring a unique perspective to software engineering. My background in the natural sciences has honed my analytical and critical thinking skills, which I now apply to software development. I am thrilled to utilize my diverse skill set to develop sustainable solutions that have a positive and lasting effect on both people and the planet.</p>
+          <p>I am a versatile problem-solver with a passion for creating innovative solutions. With my wildlife biology and veterinary medicine background, I bring a unique perspective to software engineering. My experience in the natural sciences has honed my analytical and critical thinking skills, which I now apply to software development. I am thrilled to utilize my diverse skill set to develop sustainable solutions that have a positive and lasting effect on both people and the planet.
+          <br>
+          <br>
+          When I'm not working, I can usually be found outside. I enjoy hiking, birding, skiing, and horseback riding. Environmental stewardship, conservation, and equity in the outdoors are all issues close to my heart.
+          </p>
         </div>
     </section>
     <section class="projects" id="projects">
@@ -84,7 +88,7 @@
               </div>
             </div>
           </div>
-          <p> Life List is a desktop MEN stack app that utilizes Google OAuth. Life List is for users to log birding events and to keep track of their life list.</p>
+          <p> Life List is a desktop MEN stack app that utilizes Google OAuth. Life List is for users to keep track of their birding life list.</p>
           <div class="project-links">
             <a href="https://life-list.fly.dev/" target="_blank">
               <h4>Launch</h4>
@@ -135,7 +139,7 @@
               </div>
             </div>
           </div>
-          <p>Wild Wordle is a mobile-friendly, animal-themed Wordle clone with two levels of difficulty.</p>
+          <p>Wild Wordle is a mobile-friendly, animal-themed Wordle clone with two levels of difficulty. Hard mode is not for the faint of heart!</p>
           <div class="project-links">
             <a href="https://wild-wordle.netlify.app/" target="_blank">
               <h4>Launch</h4>
