update links and ReadMe

--- a/index.html
+++ b/index.html
@@ -17,22 +17,20 @@
   <nav class="topnav" id="myTopNav">
     <ul class="social-links">
       <li>
-        <a href="https://www.linkedin.com/in/suzanne-trammel/">
+        <a href="https://www.linkedin.com/in/suzanne-trammel/" target="_blank">
           <img 
             class="icon-link"
             src="./assets/icons/linkedin.png" 
             alt="the linkedin logo"
-            target="_blank"
           >
         </a>
       </li>
       <li>
-        <a href="https://github.com/strammel33">
+        <a href="https://github.com/strammel33" target="_blank">
           <img 
             class="icon-link"
             src="./assets/icons/github.png" 
             alt="the github logo"
-            target="_blank"
           >
         </a>
       </li>
