change external project link orders and remove portfolio link

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
           </div>
           <p> Life List is a desktop MEN stack app that utilizes Google OAuth. Life List is for users to keep track of their birding life list.</p>
           <div class="project-links">
-            <a href="https://life-list.fly.dev/" target="_blank">
-              <h4>Launch</h4>
-            </a>
             <a href="https://github.com/strammel33/life-list" class="git-link" target="_blank">
               <h4>GitHub</h4>
+            </a>
+            <a href="https://life-list.fly.dev/" target="_blank">
+              <h4>Launch</h4>
             </a>
           </div>
         </div>
@@ -112,13 +112,13 @@
               </div>
             </div>
           </div>
-          <p>appliCANt is a group project MERN stack app that utilizes JWT auth. appliCANt is a tool for users to stay organized while on the job hunt. </p>
+          <p>appliCANt is a group project MERN stack app that utilizes JWT auth. appliCANt is a tool for users to stay organized while on the job search. </p>
           <div class="project-links">
-            <a href="https://job-applicant.netlify.app/" target="_blank">
-              <h4>Launch</h4>
-            </a>
             <a href="https://github.com/strammel33/applicant-front-end" class="git-link" target="_blank">
               <h4>GitHub</h4>
+            </a>
+            <a href="https://job-applicant.netlify.app/" target="_blank">
+              <h4>Launch</h4>
             </a>
           </div>
         </div>
@@ -136,11 +136,11 @@
           </div>
           <p>Wild Wordle is a mobile-friendly, animal-themed Wordle clone with two levels of difficulty. Hard mode is not for the faint of heart!</p>
           <div class="project-links">
-            <a href="https://wild-wordle.netlify.app/" target="_blank">
-              <h4>Launch</h4>
-            </a>
             <a href="https://github.com/strammel33/animal-wordle" class="git-link" target="_blank">
               <h4>GitHub</h4>
+            </a>
+            <a href="https://wild-wordle.netlify.app/" target="_blank">
+              <h4>Launch</h4>
             </a>
           </div>
         </div>
@@ -161,11 +161,11 @@
           </div>
           <p>Plant Partner is a responsive Python/Django app to help users keep track of when they last took care of their house plants.</p>
           <div class="project-links">
-            <a href="https://plantpartner.fly.dev/" target="_blank">
-              <h4>Launch</h4>
-            </a>
             <a href="https://github.com/strammel33/plant-partner" class="git-link" target="_blank">
               <h4>GitHub</h4>
+            </a>
+            <a href="https://plantpartner.fly.dev/" target="_blank">
+              <h4>Launch</h4>
             </a>
           </div>
         </div>
@@ -184,9 +184,6 @@
         </div>
         <p>I built this mobile-friendly portfolio to practice my skills, flex my design ability, and share more about myself.</p>
         <div class="project-links">
-          <a href="https://suzanne-trammel-portfolio.netlify.app/" target="_blank">
-            <h4>Launch</h4>
-          </a>
           <a href="https://github.com/strammel33/portfolio" class="git-link" target="_blank">
             <h4>GitHub</h4>
           </a>
