--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
           </div>
         </div>
-        <p>I built this mobile-friendly portfolio to practice my skills, flex my design ability, and share more about myself.</p>
+        <p>I built this mobile-friendly portfolio to practice my skills, share my design ability, and display my projects.</p>
         <div class="project-links">
           <a href="https://github.com/strammel33/portfolio" class="git-link" target="_blank">
             <h4>GitHub</h4>
